--- a/main.css
+++ b/main.css
@@ -7,9 +7,15 @@ p {
   color: "red"
 }
 
-.navbar{ background: rgba(15, 18, 30, 0.9);}
+body {
+  background-color: rgba(15, 18, 30, 1);
+  font-family: 'Oxygen';
+  color: #f4f4f4;
+}
 
-.nav-link , .navbar-brand{ color: #eedc6e; cursor: pointer;}
+.navbar{ background: rgba(15, 18, 30, 0.5);}
+
+.nav-link , .navbar-brand{ color: #eedc6e; cursor: pointer; font-family: 'Overpass Mono';}
 
 .nav-link{ margin-right: 1em !important;}
 
@@ -22,6 +28,8 @@ p {
 .navbar-toggler{ background: rgba(0,0,0,0) !important; }
 
 .navbar-toggler-icon{ background-image: url("icons/menu-24px.svg"); }
+
+.btn-outline-secondary{ color: #f4f4f4; background-color: #000000; border-color: #eedc6e; border-width: medium;}
 
 .header{
  background-image: url("https://live.staticflickr.com/65535/48969712752_be1ca7d663_k.jpg");
@@ -36,5 +44,12 @@ p {
  min-width: 100%;
  left: 0;
  top: 0;
- background: rgba(10, 10, 10, 0.75);
+ background: rgba(10, 10, 10, 0.5);
+}
+
+.description{
+    position: absolute;
+    top: 30%;
+    margin: auto;
+    padding: 2em;
 }
