--- a/main.css
+++ b/main.css
@@ -9,8 +9,19 @@ p {
 
 body {
   background-color: rgba(15, 18, 30, 1);
-  font-family: 'Oxygen';
+  font-family: 'Overpass Mono';
   color: #f4f4f4;
+}
+
+.column {
+  float: top;
+  width: 25%;
+  padding: 23px;
+}
+.row::after {
+  content: "";
+  clear: both;
+  display: table;
 }
 
 .navbar{ background: rgba(15, 18, 30, 0.5);}
@@ -48,8 +59,10 @@ body {
 }
 
 .description{
+    font-family: 'Overpass Mono';
     position: absolute;
     top: 30%;
     margin: auto;
     padding: 2em;
+    text-shadow: 2px 2px #0f0e0c
 }
