--- a/main.css
+++ b/main.css
@@ -1,17 +1,25 @@
 /*applies to everything*/
+h1 {
+  font-size:36pt;
+}
 
 h3 {
+  font-size:24pt;
   color: #eedc6e;
 }
 
 p {
-  color: "red"
+  font-size:16pt;
 }
 
 body {
   background-color: rgba(15, 18, 30, 1);
   font-family: 'Overpass Mono';
   color: #f4f4f4;
+}
+
+div {
+  padding: 10px;
 }
 
 .column {
@@ -82,6 +90,8 @@ body {
     position: absolute;
     top: 30%;
     margin: auto;
+    right: 20%;
+    left: 20%;
     padding: 2em;
     text-shadow: 2px 2px #0f0e0c
 }
