--- a/main.css
+++ b/main.css
@@ -9,12 +9,41 @@ body {
   color: #f4f4f4;
 }
 
+.row {
+  display: flex;
+  flex-wrap: wrap;
+  padding: 0 4px;
+}
+
+/* Create four equal columns that sits next to each other */
 .column {
-  float: top;
-  width: 25%;
-  margin: auto;
-  padding: 10px;
-  filter: opacity(80%);
+  flex: 25%;
+  max-width: 25%;
+  padding: 0 4px;
+}
+
+.column img {
+  margin-top: 8px;
+  vertical-align: middle;
+  width: 100%;
+}
+
+/* Responsive layout - makes a two column-layout instead of four columns */
+@media screen and (max-width: 800px) {
+  .column {
+    flex: 50%;
+    max-width: 50%;
+  }
+}
+
+/* Responsive layout - makes the two columns stack on top of each other instead of next to each other */
+@media screen and (max-width: 600px) {
+  .column {
+    flex: 100%;
+    max-width: 100%;
+  }
+}
+
 }
 .column:hover {
   filter: opacity(100%);
@@ -92,8 +121,4 @@ body {
     left: 20%;
     padding: 2em;
     text-shadow: 2px 2px #0f0e0c
-}
-
-.project-item {
-  background: rgba(20, 20, 20, 0.5);
 }
