--- a/main.css
+++ b/main.css
@@ -9,6 +9,14 @@ body {
   color: #f4f4f4;
 }
 
+a:link {
+  color: #f4f4f4;
+}
+
+h3 a {
+  color: #f4f4f4;
+}
+
 .row {
   display: flex;
   flex-wrap: wrap;
@@ -17,13 +25,14 @@ body {
 
 /* Create four equal columns that sits next to each other */
 .column {
+  font-family: 'Overpass Mono';
   flex: 25%;
-  max-width: 25%;
-  padding: 0 4px;
+  max-width: 33%;
+  padding: 0 6px;
+  filter: opacity(75%);
 }
 
 .column img {
-  margin-top: 8px;
   vertical-align: middle;
   width: 100%;
 }
@@ -44,7 +53,6 @@ body {
   }
 }
 
-}
 .column:hover {
   filter: opacity(100%);
   border-radius: 5%;
@@ -73,6 +81,8 @@ body {
 .navbar-toggler-icon{ background-image: url("icons/menu-24px.svg"); }
 
 .btn-outline-secondary{ color: #f4f4f4; background-color: #000000; border-color: #eedc6e; border-width: medium;}
+
+.border-secondary{ color: #f4f4f4; background-color: rgba(15, 18, 30, 1); border-color: #eedc6e; border-width: medium;}
 
 .header{
  animation: fadeInAnimation ease 2s;
@@ -121,4 +131,44 @@ body {
     left: 20%;
     padding: 2em;
     text-shadow: 2px 2px #0f0e0c
+}
+
+.panels{
+  animation: fadeInAnimation ease 2s;
+  animation-iteration-count: 1;
+  animation-fill-mode: forwards;
+  text-align: center;
+  font-family: 'Overpass Mono';
+  margin: 0 10% 0 10%;
+  padding: 2em;
+}
+
+.col_list {
+  list-style-type: none;
+  border: 1px solid #eee;
+  margin: 0;
+  padding: 0;
+  -webkit-transition: 0.3s;
+  transition: 0.3s;
+  color: white;
+  font-size: 25px;
+}
+
+.col_list:hover {
+  box-shadow: 0 8px 12px 0 rgba(0,0,0,0.2)
+}
+
+.col_list li {
+  border-bottom: 1px solid #eee;
+  padding: 20px;
+  text-align: center;
+}
+
+.col_list .grey {
+  background-color: rgb(92, 92, 92);
+  font-size: 20px;
+}
+
+.card-body {
+  color:#f4f4f4;
 }
