--- a/main.css
+++ b/main.css
@@ -1,5 +1,35 @@
+/*hack to make index.html content respond*/
+.lg-view{
+  display:inline-block;
+}
+
+.sm-view{
+  display:none;
+}
+
+@media screen and (max-width: 600px) {
+  .lg-view {
+    display: none;
+  }
+  .sm-view {
+    display: inline-block;
+  }
+}
+
 /*applies to everything*/
+html {
+  font-size: calc(15px + 0.39vw);
+}
+
+h1 {
+  font-size: 1.8rem;
+}
+h2 {
+  font-size: 1.5rem;
+}
+
 h3 {
+  font-size: 1.3rem;
   color: #eedc6e;
 }
 
@@ -59,6 +89,31 @@ h3 a {
   .column {
     flex: 100%;
     max-width: 100%;
+  }
+}
+
+.card-columns {
+  animation: fadeInAnimation ease 4s;
+  animation-iteration-count: 1;
+  animation-fill-mode: forwards;
+}
+
+/* Responsive layout for bootstrap card-columns */
+@media (min-width: 576px) {
+  .card-columns {
+      column-count: 2;
+  }
+}
+
+@media (min-width: 768px) {
+  .card-columns {
+      column-count: 3;
+  }
+}
+
+@media (min-width: 992px) {
+  .card-columns {
+      column-count: 4;
   }
 }
 
@@ -156,6 +211,14 @@ h3 a {
   padding: 2em;
 }
 
+.card {
+  display: inline-block;
+}
+
+.card-body {
+  color:#f4f4f4;
+}
+
 .col_list {
   list-style-type: none;
   border: 1px solid #eee;
@@ -180,8 +243,4 @@ h3 a {
 .col_list .grey {
   background-color: rgb(92, 92, 92);
   font-size: 20px;
-}
-
-.card-body {
-  color:#f4f4f4;
 }
