--- a/main.css
+++ b/main.css
@@ -1,16 +1,16 @@
-:root {
-  --c1: #1CA5EA;
-  --c2: #3A0851;
-}
-
 body {
-  background: linear-gradient(100deg, var(--c1) 0%, var(--c2) 100%);
+  background: linear-gradient(100deg, #1CA5EA 0%, #3A0851 100%);
   margin: 0px;
+  justify-content: center;
+  color: white;
+  text-shadow: 1px 1px 2px black;
+  font-family: 'Oxygen', sans-serif;
+  font-size: clamp(1rem, 1.5vw, 1.5rem);
 }
 
 h1 {
-  font-family: 'Overpass Mono', serif;
-  font-size: clamp(1rem, 5vw, 5rem);
+  font-family: 'Overpass Mono', sans-serif;
+  font-size: clamp(1.5rem, 5vw, 5rem);
   text-decoration: none;
   text-shadow: 2px 2px 4px black;
   color: #eedc6e;
@@ -18,15 +18,15 @@ h1 {
 
 h2 {
   color: black;
-  font-family: 'Overpass Mono', serif;
-  font-size: clamp(1rem, 3vw, 3rem);
+  font-family: 'Oxygen', sans-serif;
+  font-size: clamp(1.25rem, 3vw, 3rem);
   text-decoration: none;
 }
 
 h3 {
   color: white;
-  font-family: 'Overpass Mono', serif;
-  font-size: clamp(1rem, 3vw, 3rem);
+  font-family: 'Overpass Mono', sans-serif;
+  font-size: clamp(1.25rem, 3vw, 3rem);
   text-decoration: none;
   text-shadow: 2px 2px 4px black;
 }
@@ -43,13 +43,46 @@ img {
   padding: 20px;
 }
 
+.rescale {
+  object-fit: scale-down;
+  overflow: hidden;
+}
+
+.spacer {
+  height: 3vh;
+}
+
+.btn {
+  background: #eedc6e;
+  color: black;
+  font-family: 'Oxygen', sans-serif;
+  font-size: clamp(0.5rem, 1vw, 3rem);
+  text-decoration: none;
+  text-shadow: none;
+}
+
+.card-title {
+  color: black;
+  font-family: 'Overpass Mono', sans-serif;
+  font-size: clamp(1.25rem, 3vw, 3rem);
+  text-decoration: none;
+  text-shadow: none;
+}
+
+.card-text {
+  color: black;
+  text-shadow: none;
+  font-family: 'Oxygen', sans-serif;
+  font-size: clamp(1rem, 1.5vw, 1.5rem);
+}
+
 #top-badge {
   position: absolute;
   display: flex;
   margin: 0px;
   padding: 0px;
   top: 10px;
-  left: 5vh;
+  left: 3vh;
   z-index: 3;
 }
 
@@ -142,7 +175,7 @@ img {
   display: block;
   font-family: 'Overpass Mono', serif;
   font-size: clamp(3rem, 8vw, 8rem);
-  padding: clamp(0.25rem, 3vh, 1rem) 0rem;
+  padding: clamp(0.25rem, 2vh, 0.5rem) 0rem;
   text-decoration: none;
   text-shadow: 2px 2px 4px black;
   transition: opacity 400ms ease, color 400ms ease;
