--- a/main.css
+++ b/main.css
@@ -1,11 +1,15 @@
 body {
-  background: linear-gradient(100deg, #1CA5EA 0%, #3A0851 100%);
+  background: linear-gradient(90deg, #1CA5EA 0%, #3A0851 100%);
   margin: 0px;
   justify-content: center;
   color: white;
   text-shadow: 1px 1px 2px black;
   font-family: 'Oxygen', sans-serif;
   font-size: clamp(1rem, 1.5vw, 1.5rem);
+}
+
+body a {
+  color: #eedc6e;
 }
 
 h1 {
