Add project content

--- a/main.css
+++ b/main.css
@@ -111,7 +111,7 @@ img {
 }
 
 #menu-items {
-  margin-left: clamp(4rem, 12vw, 48rem);
+  margin-left: clamp(4rem, 12vw, 12rem);
   position: relative;
   transition: 0.5s;
   z-index: 2;
@@ -178,7 +178,7 @@ img {
   cursor: pointer;
   display: block;
   font-family: 'Overpass Mono', serif;
-  font-size: clamp(3rem, 12vh, 7rem);
+  font-size: clamp(3rem, 10vh, 8vw);
   padding: clamp(0.25rem, 2vh, 0.5rem) 0rem;
   text-decoration: none;
   text-shadow: 2px 2px 4px black;
